--- a/.devcontainer/configuration.yaml
+++ b/.devcontainer/configuration.yaml
@@ -6,4 +6,4 @@ logger:
     custom_components.vaillant_vsmart: debug
 
 # If you need to debug uncomment the line below (doc: https://www.home-assistant.io/integrations/debugpy/)
-# debugpy:
+debugpy:
