--- a/custom_components/vaillant_vsmart/manifest.json
+++ b/custom_components/vaillant_vsmart/manifest.json
@@ -1,12 +1,12 @@
 {
   "domain": "vaillant_vsmart",
   "name": "Vaillant vSMART",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "iot_class": "cloud_polling",
   "documentation": "https://github.com/MislavMandaric/home-assistant-vaillant-vsmart",
   "issue_tracker": "https://github.com/MislavMandaric/home-assistant-vaillant-vsmart/issues",
-  "dependencies": [],
+  "dependencies": ["http"],
   "config_flow": true,
   "codeowners": ["@MislavMandaric"],
-  "requirements": []
+  "requirements": ["vaillant-netatmo-api==0.1.2"]
 }
