--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
 	"appPort": [
 		"9123:8123"
 	],
-	"postCreateCommand": "container install && pip install vaillant-netatmo-api",
+	"postCreateCommand": "container install",
 	"extensions": [
 		"ms-python.python",
 		"github.vscode-pull-request-github",
