chore: Updates github actions setup

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,21 +1,24 @@
-name: Cron actions
+name: tests
 
 on:
-  schedule:
-    - cron:  '0 0 * * *'
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
 
 jobs:
   validate:
+  
     runs-on: "ubuntu-latest"
     name: Validate
+
     steps:
         - uses: "actions/checkout@v2"
-
         - name: HACS validation
           uses: "hacs/action@main"
           with:
             category: "integration"
             ignore: brands
-
         - name: Hassfest validation
           uses: "home-assistant/actions/hassfest@master"
