--- a/setup.cfg
+++ b/setup.cfg
@@ -46,7 +46,7 @@ show_missing = true
 fail_under = 100
 
 [semantic_release]
-version_pattern = custom_components/vaillant_vsmart/manifest.json:\"version\": \"{version}\",
+version_pattern = custom_components/vaillant_vsmart/manifest.json:\"version\": \"{version}\"
 commit_subject = chore(release): {version} [skip ci]
 major_on_zero = false
 upload_to_pypi = false
