--- a/setup.cfg
+++ b/setup.cfg
@@ -50,3 +50,5 @@ version_pattern = custom_components/vaillant_vsmart/manifest.json:\"version\": \
 commit_subject = chore(release): {version} [skip ci]
 major_on_zero = false
 upload_to_pypi = false
+upload_to_release = false
+build_command = false
