--- a/custom_components/vaillant_vsmart/manifest.json
+++ b/custom_components/vaillant_vsmart/manifest.json
@@ -2,6 +2,7 @@
   "domain": "vaillant_vsmart",
   "name": "Vaillant vSMART",
   "version": "0.6.2",
+  "integration_type": "hub",
   "iot_class": "cloud_polling",
   "documentation": "https://github.com/MislavMandaric/home-assistant-vaillant-vsmart",
   "issue_tracker": "https://github.com/MislavMandaric/home-assistant-vaillant-vsmart/issues",
