fix: Parallel run of prerelease and release because release can't be triggered from multiple branches

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
         additional_options: --prerelease
 
   release:
-    needs: [prerelease]
+    needs: [validate]
 
     runs-on: ubuntu-latest
     concurrency: release
