--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 colorlog==6.7.0
-homeassistant==2023.12.1
+homeassistant==2024.5.1
 pip>=21.0,<23.2
-pytest==7.4.3
-pytest-homeassistant-custom-component==0.13.83
+pytest==8.1.1
+pytest-homeassistant-custom-component==0.13.121
 ruff==0.0.292
+vaillant-netatmo-api==0.11.0
