--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 colorlog==6.7.0
 homeassistant==2024.6.4
 pip>=21.0,<23.2
+pytest==8.2.2
 pytest-homeassistant-custom-component==0.13.136
 ruff==0.5.0
