--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 colorlog==6.7.0
-homeassistant==2024.6.4
-pip>=21.0,<23.2
-pytest==8.2.0
-pytest-homeassistant-custom-component==0.13.136
+homeassistant==2024.12.0
+pip>=24.3
+pytest==8.3.3
+pytest-homeassistant-custom-component==0.13.190
 ruff==0.5.0
+vaillant-netatmo-api==0.11.0
+aiohttp~=3.11.9
+voluptuous~=0.15.2
+asyncio~=3.4.3
