--- a/custom_components/vaillant_vsmart/manifest.json
+++ b/custom_components/vaillant_vsmart/manifest.json
@@ -2,7 +2,7 @@
   "domain": "vaillant_vsmart",
   "name": "Vaillant vSMART",
   "codeowners": [
-    "@MislavMandaric"
+    "@OToussaint"
   ],
   "config_flow": true,
   "dependencies": [
@@ -13,7 +13,7 @@
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/MislavMandaric/home-assistant-vaillant-vsmart/issues",
   "requirements": [
-    "vaillant-netatmo-api==0.12.1"
+    "vaillant-netatmo-api-reloaded==0.12.2"
   ],
-  "version": "0.11.0"
+  "version": "0.11.1"
 }
